--- a/myrestapi/templates/core/base.html
+++ b/myrestapi/templates/core/base.html
@@ -4,8 +4,12 @@
     </head>
     
     <body>
+        <div>
         TEST
-        {% block content %} {% endblock content %}
+            </div>
+        <div>
+            {% block content %} {% endblock content %}
+        </div>
     </body>
 
 </html>
